--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://github.com/zyuumonziyari/zyuumon/blob/main/IMG_2418.JPG">
+        <img class="logo" src="https://sakichin.com/image/chapter01_img/chapter01_step03_011/vl_020.jpg">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
